# osu-switcher

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: icons.rs  main.rs  osu_util.rs  shortcuts.rs  switcher.rs
src/tui/: input.rs  mod.rs
