[package]
name = "osu-switcher"
version = "1.2.1"
description = "A tool for automatically switching osu! accounts between servers"
repository = "https://github.com/rushiiMachine/osu-switcher"
authors = ["rushiiMachine (https://github.com/rushiiMachine)"]
license-file = "LICENSE"
edition = "2021"
publish = false

[profile.release]
strip = "debuginfo"
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
mslnk = "0.1.8"
seahorse = "2.2.0"
whoami = "1.5.1"
rust-ini = "0.21.0"
powershell_script = "1.1.0"
#osu-db = { version = "0.3.0", default-features = false }
osu-db = { git = "https://github.com/rushiiMachine/osu-db", branch = "fix/breaking-change-20250107", default-features = false }
